# EasyAnalyse

./: .editorconfig  .gitattributes  .gitignore  AI原生电路交换格式.schema.json  AI原生电路交换格式设计.md  AI原生电路表达与还原工具 PRD.md  AI原生电路表达与还原工具.canvas  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en-US.md  README.md  README.zh-CN.md  SECURITY.md  exchange.md
.github/: labels.yml  pull_request_template.md
automation/: README.md  autonomous_handoff.md  autonomous_lock.py  autonomous_lock_test.py  autonomous_state.json  autonomous_supervisor.md  decision_log.md  task_queue.md
easyanalyse-desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json
easyanalyse-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
easyanalyse-desktop/src-tauri/capabilities/: default.json
easyanalyse-desktop/src-tauri/crates/easyanalyse-core/: Cargo.toml
easyanalyse-desktop/src-tauri/crates/easyanalyse-core/schema/: ai-native-circuit-exchange.schema.json
easyanalyse-desktop/src-tauri/crates/easyanalyse-core/src/: diff.rs  lib.rs  model.rs  validation.rs
easyanalyse-desktop/src-tauri/src/: commands.rs  main.rs  share.rs
easyanalyse-mobile-android/: README.md  build.gradle.kts  keystore.properties.example  local.properties.example  settings.gradle.kts
scripts/: create_android_release_keystore.ps1  generate_app_icons.py
testJson/: 1.json  2.json  butterworth-4th-order-lowpass.json  cc.json  claude_lna_jfe2140_57db.json  deepseek_json_20260419_01016d.json  deepseek_json_20260419_103239.json  doubaoAmoLowDB.json  lm358-noninverting-amplifier.json  (+7 more)
(+166 files in other folders)
